WIP major updates

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@gnus-ai/erc20-proxy-gnus-ai",
   "version": "1.0.0",
   "description": "ERC20 Proxy for GNUS.ai Diamond NFT system",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "npx hardhat test-multichain --chains hardhat",
     "test-verbose": "HARDHAT_VERBOSE=true npx hardhat test",
@@ -17,7 +17,9 @@
     "verify": "npx hardhat run scripts/VerifyContracts.ts",
     "getgascost": "npx hardhat run scripts/getgascost.ts",
     "getaccessinfo": "npx hardhat run scripts/getaccessinfo.ts",
-    "build": "tsc",
+    "build": "npx hardhat compile && npx ts-node scripts/generate-diamond-abi-with-typechain.ts && npx ts-node scripts/generate-diamond-abi-with-typechain.ts ProxyDiamond",
+    "generate-diamond-abi": "npx ts-node scripts/diamond-abi-generator.ts",
+    "generate-diamond-abi-typechain": "npx ts-node scripts/generate-diamond-abi-with-typechain.ts",
     "watch": "tsc -w"
   },
   "authors": [
@@ -27,65 +29,60 @@
   "license": "MIT",
   "devDependencies": {
     "@gnus.ai/contracts-upgradeable-diamond": "=4.5.0",
-    "@nomiclabs/hardhat-ethers": "^2.0.5",
-    "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.2",
-    "@openzeppelin/defender-admin-client": "^1.54.1",
-    "@openzeppelin/defender-base-client": "^1.54.1",
-    "@typechain/ethers-v5": "^9.0.0",
-    "@typechain/hardhat": "^4.0.0",
-    "@types/chai": "^4.3.0",
-    "@types/chai-as-promised": "^7.1.5",
-    "@types/debug": "^4.1.7",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-ignition": "^0.15.0",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@nomicfoundation/hardhat-web3-v4": "^1.0.0",
+    "@nomicfoundation/ignition-core": "^0.15.9",
+    "@openzeppelin/defender-sdk": "^2.0.0",
+    "@openzeppelin/defender-sdk-proposal-client": "^2.0.0",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^9.1.0",
+    "@types/chai": "^4.2.0",
+    "@types/chai-as-promised": "^8.0.1",
+    "@types/debug": "^4.1.12",
     "@types/fs-extra": "^11.0.4",
-    "@types/glob": "^7.2.0",
-    "@types/mocha": "^9.1.0",
-    "@types/node": "^22.15.17",
+    "@types/glob": "^8.1.0",
+    "@types/mocha": ">=9.1.0",
+    "@types/node": ">=18.0.0",
+    "@types/sinon-chai": "^4.0.0",
     "@types/uint32": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
     "abi2oas": "^0.1.4",
-    "chai": "^4.3.6",
+    "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "chalk": "^5.4.1",
-    "contracts-starter": "git+https://github.com/mudgen/diamond-2-hardhat.git",
-    "dotenv": "^10.0.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.4.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.4",
+    "contracts-starter": "https://github.com/mudgen/diamond-2-hardhat.git",
+    "diamonds": "https://github.com/GeniusVentures/diamonds.git#develop",
+    "dotenv": "^16.4.7",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-n": "^17.15.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-promise": "^5.2.0",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.4",
-    "fs-extra": "^11.3.0",
-    "hardhat": "^2.9.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "^7.2.1",
+    "ethers": "^6.4.0",
+    "globals": "^15.14.0",
+    "hardhat": "^2.26.2",
     "hardhat-abi-exporter": "^2.8.0",
-    "hardhat-diamond-abi": "git+https://github.com/Am0rfu5/hardhat-diamond-abi.git",
+    "hardhat-diamonds": "https://github.com/GeniusVentures/hardhat-diamonds.git#develop",
     "hardhat-gas-reporter": "^1.0.8",
-    "hardhat-multichain": "git+https://github.com/GeniusVentures/hardhat-multchain.git#",
-    "prettier": "^3.5.3",
-    "prettier-plugin-solidity": "^1.0.0-beta.19",
-    "solhint": "^3.3.7",
-    "solidity-coverage": "^0.8.14",
-    "typechain": "^7.0.0",
-    "typescript": "^4.5.5",
+    "hardhat-multichain": "https://github.com/GeniusVentures/hardhat-multichain#main",
+    "prettier": "^3.4.2",
+    "prettier-plugin-solidity": "^1.4.1",
+    "sinon": "^21.0.0",
+    "solhint": "^5.0.3",
+    "solidity-coverage": "^0.8.0",
+    "ts-node": "^10.9.2",
+    "typechain": "^8.3.0",
+    "typescript": ">=4.5.0",
     "uint32": "^0.2.1",
-    "zod": "^3.24.2"
-  },
-  "dependencies": {
-    "@ethersproject/abi": "^5.0.0",
-    "@ethersproject/bytes": "^5.0.0",
-    "@ethersproject/providers": "^5.0.0",
-    "@gnus.ai/diamonds": "file:./packages/diamonds",
-    "@gnus.ai/hardhat-diamonds": "file:./packages/hardhat-diamonds",
-    "@nomiclabs/hardhat-web3": "^2.0.0",
-    "@types/sinon-chai": "^3.2.3",
-    "lodash": "^4.17.15",
-    "ts-node": "^10.9.1",
-    "web3": "^1.0.0-beta.36",
+    "web3": "^4.16.0",
     "winston": "^3.17.0"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@4.9.2"
 }
